<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoodActivity"
    android:orientation="vertical"
    android:background="@color/light_gray"
    >

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/mood_desc"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        />

    <DatePicker
        android:id="@+id/dtPckDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"
        >

        <TextView
            android:id="@+id/txtJoy"
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:background="@color/sunray"
            android:gravity="center"
            android:text="@string/txt_joy"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/txtAnger"
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/txt_anger"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/txtDisgust"
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:background="@color/light_green"
            android:gravity="center"
            android:text="@string/txt_disgust"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/txtSadness"
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/txt_sadness"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/txtFear"
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:background="@color/purple"
            android:gravity="center"
            android:text="@string/txt_fear"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/txtMeh"
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/txt_meh"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>